<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParentLayout"
    android:padding="@dimen/dimen_24">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        style="@style/WrapContentLayout"
        android:rotation="90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_down" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/WrapContentLayout"
        android:text="@string/cart"
        android:textColor="@color/light_saffron"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCart"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/dimen_0"
        android:layout_marginVertical="@dimen/dimen_18"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/tvOrderDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack"
        app:srcCompat="@drawable/shoe"
        tools:listitem="@layout/item_cart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOrderDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/order_details"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvSubTotal"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubTotal"
        style="@style/WrapContentLayout"
        android:layout_marginBottom="@dimen/dimen_12"
        android:text="@string/subtotal"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintBottom_toTopOf="@id/tvTaxAndCharges"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTaxAndCharges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32"
        android:text="@string/tax_charges"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintBottom_toTopOf="@id/tvTotal"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32"
        android:text="@string/total"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPriceAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/light_saffron"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvTotal"
        app:layout_constraintStart_toEndOf="@id/tvTotal"
        app:layout_constraintTop_toTopOf="@id/tvTotal" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_saffron"
        android:paddingHorizontal="@dimen/dimen_22"
        android:text="@string/checkout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="@id/tvPriceAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvPriceAmount"
        app:layout_constraintTop_toTopOf="@id/tvPriceAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>